data/derived/comb/progs/unify/prog5715.ml.out
Characters 84-89:
  | Sine(e1) -> sin ("x")
                    ^^^^^
Error: This expression has type string but an expression was expected of type
         float
